--- a/src/index.html
+++ b/src/index.html
@@ -52,84 +52,48 @@
 
   <div id="container">
     <div class="content">
-      <div class="gallery-container">
-        <div class="artwork-grid">
-          <div class="artwork-item">
-            <img src="./images/thumbnails/screenshot_hud_trade-512.jpg" alt="Game Artwork 1" class="artwork-image">
-            <div class="artwork-info">
-              <h6>Exchange food, tools, and labor while managing your trade balance to ensure your settlement thrives through every season.</h6>
+
+      <div class="gallery">
+        <div class="gallery__grid">
+          <div class="gallery__item">
+            <img src="./images/thumbnails/screenshot_hud_trade-512.jpg" alt="Game Artwork 1" class="gallery__image">
+            <div class="gallery__info">
+              <h6 class="gallery__text">Exchange food, tools, and labor while managing your trade balance to ensure your settlement thrives through every season.</h6>
             </div>
           </div>
-          <div class="artwork-item">
-            <img src="./images/thumbnails/screenshot_terrain_hud-512.jpg" alt="Game Artwork 1" class="artwork-image">
-            <div class="artwork-info">
-              <h6>Navigate diverse terrain with forests, mountains, and waterways while defending against looming threats in this pixel-perfect strategy adventure.</h6>
+          <div class="gallery__item">
+            <img src="./images/thumbnails/screenshot_terrain_hud-512.jpg" alt="Game Artwork 1" class="gallery__image">
+            <div class="gallery__info">
+              <h6 class="gallery__text">Navigate diverse terrain with forests, mountains, and waterways while defending against looming threats in this pixel-perfect strategy adventure.</h6>
             </div>
           </div>
-          <div class="artwork-item">
-            <img src="./images/thumbnails/screenshot_orthogonal-512.jpg" alt="Game Artwork 1" class="artwork-image">
-            <div class="artwork-info">
-              <h6>Establish your fortress at strategic locations across a vibrant, procedurally generated world.</h6>
+          <div class="gallery__item">
+            <img src="./images/thumbnails/screenshot_orthogonal-512.jpg" alt="Game Artwork 1" class="gallery__image">
+            <div class="gallery__info">
+              <h6 class="gallery__text">Establish your fortress at strategic locations across a vibrant, procedurally generated world.</h6>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="content">
-      <div>
-        Coming Soon.
-      </div>
-    </div>
-
-  </div>
-
-  <!-- In your index.html or template -->
-  <div class="trailer-section">
-    <h2>Game Trailer</h2>
-
-    <div id="game-trailer" class="video-placeholder" data-video-src="trailer_combat_simple.mp4">
-      <div class="play-button">▶</div>
-      <p>Click to watch trailer</p>
-    </div>
-  </div>
-
-  <!-- Add additional placeholders as needed -->
-  <div class="gameplay-section">
-    <h2>Gameplay Preview</h2>
-
-    <div id="gameplay-preview" class="video-placeholder" data-video-src="trailer_combat_simple.webm">
-      <div class="play-button">▶</div>
-      <p>Click to watch gameplay</p>
-    </div>
-  </div>
 
 
+<!--  <div class="trailer-section">-->
+<!--    <div id="game-trailer" class="video-placeholder" data-video-src="trailer_combat_simple.mp4">-->
+<!--      <div class="play-button">▶</div>-->
+<!--      <p>Click to watch trailer</p>-->
+<!--    </div>-->
+<!--  </div>-->
 
-  <footer>
-    <div class="gallery-container">
-      <div class="artwork-grid">
-        <div class="icon-item">
-          <img src="./images/mail.svg" class="icon-image" alt="mail logo">
-          <div class="icon-info">
-            <p class="icon-description">Lorem ipsum</p>
-          </div>
-        </div>
-        <div class="icon-item">
-          <img src="./images/mailbox.svg" class="icon-image" alt="mailbox logo">
-          <div class="icon-info">
-            <p class="icon-description">Lorem ipsum</p>
-          </div>
-        </div>
-        <div class="icon-item">
-          <img src="./images/social.svg" class="icon-image"  alt="social media">
-          <div class="icon-info">
-            <p class="icon-description">Lorem ipsum</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </footer>
+<!--  &lt;!&ndash; Add additional placeholders as needed &ndash;&gt;-->
+<!--  <div class="gameplay-section">-->
+<!--    <div id="gameplay-preview" class="video-placeholder" data-video-src="trailer_combat_simple.webm">-->
+<!--      <div class="play-button">▶</div>-->
+<!--      <p>Click to watch gameplay</p>-->
+<!--    </div>-->
+<!--  </div>-->
+
 
   <style>
     #debug-panel {
