--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
   <div class="marketing-content">
     <h1 class="marketing-content__slogan">Forge your fortress</h1>
-    <h1 class="marketing-content__slogan">Master the terrain</h1>
-    <h1 class="marketing-content__slogan">Withstand the onslaught</h1>
+    <h1 class="marketing-content__slogan">Prosper in untamed lands</h1>
+    <h1 class="marketing-content__slogan">Withstand the demon horde</h1>
   </div>
 
   <div class="features">
