--- a/src/index.html
+++ b/src/index.html
@@ -29,54 +29,82 @@
 
 
   <div class="marketing-content">
+    <h1 class="marketing-content__slogan">Found your city</h1>
+    <h1 class="marketing-content__slogan">Prosper in untamed lands</h1>
+    <h1 class="marketing-content__slogan">Withstand the demon horde</h1>
     <h1 class="marketing-content__slogan">Forge your fortress</h1>
-    <h1 class="marketing-content__slogan">Master the terrain</h1>
-    <h1 class="marketing-content__slogan">Withstand the onslaught</h1>
   </div>
 
-  <div class="features">
-    <ul class="features__list">
-      <li class="features__item">
-        <div class="features__icon">🏔️</div>
-        <h3 class="features__title">3D Terrain Mastery</h3>
-        <p class="features__description">Exploit elevation advantages for devastating attack range and strategic damage bonuses.</p>
-      </li>
-
-      <li class="features__item">
-        <div class="features__icon">⚒️</div>
-        <h3 class="features__title">Resource Management</h3>
-        <p class="features__description">Balance critical resources with defensive capabilities to ensure your settlement thrives.</p>
-      </li>
-
-      <li class="features__item">
-        <div class="features__icon">🏰</div>
-        <h3 class="features__title">Multi-Tiered Defenses</h3>
-        <p class="features__description">Create devastating defensive arrangements by combining tower abilities with 3D terrain advantages.</p>
-      </li>
-    </ul>
-  </div>
-
-  <div class="marketing-content">
-    <a href="https://store.steampowered.com/app/YOUR_APP_ID/Fortifend/" class="cta-button">
-      WISHLIST ON STEAM
-    </a>
-  </div>
 
   <div id="container">
 
+    <div class="features">
+      <ul class="features__list">
 
-    <div class="trailer-section">
-      <div id="game-trailer"
-           class="video-placeholder"
-           data-video-src="trailer_combat_simple.mp4"
-           style="background-image: url('./images/thumbnails/trailer_combat_simple-768.webp')"
-      >
-        <div class="play-button">▶</div>
-      </div>
+        <li class="features__item">
+<!--          <div class="features__icon">🏰</div>-->
+          <h3 class="features__title">Multi-Tiered Defenses</h3>
+            <img class="features__image"
+                 src="./images/game_wide1.png"
+                 data-fullsize="./images/game_wide1.png">
+          <p class="features__description">Construct devastating multi-layered defensive arrangements by combining tower abilities with natural 3d terrain advantages.</p>
+        </li>
+
+        <li class="features__item">
+<!--          <div class="features__icon">⚒️</div>-->
+          <h3 class="features__title">Resource Management</h3>
+            <img class="features__image"
+                 src="./images/game_wide2.png"
+                 data-fullsize="./images/game_wide1.png">
+          <p class="features__description">Construct strategic defenses while preserving the economic arteries that keep your civilization thriving.</p>
+        </li>
+
+        <li class="features__item">
+            <!--          <div class="features__icon">🏔️</div>-->
+          <h3 class="features__title">3D Terrain Mastery</h3>
+          <img class="features__image"
+            src="./images/game_wide1.png"
+            data-fullsize="./images/game_wide1.png">
+<!--          <p class="features__description">Build your medieval stronghold and expand your city across ever-changing procedural landscapes where no two maps are identical.</p>-->
+          <p class="features__description">Exploit elevation advantages for devastating attack range and strategic damage bonuses as you build your medieval stronghold and expand across ever-changing procedural landscapes.</p>
+        </li>
+      </ul>
     </div>
 
 
+
+    <div class="marketing-content">
+      <a href="https://store.steampowered.com/app/YOUR_APP_ID/Fortifend/" class="cta-button">
+        WISHLIST ON STEAM
+      </a>
+    </div>
+
+
+<!--    <div class="trailer-section">-->
+<!--      <div id="game-trailer"-->
+<!--           class="video-placeholder"-->
+<!--           data-video-src="trailer_combat_simple.mp4"-->
+<!--           style="background-image: url('./images/thumbnails/trailer_combat_simple-768.webp')"-->
+<!--      >-->
+<!--        <div class="play-button">▶</div>-->
+<!--      </div>-->
+<!--    </div>-->
+
+
     <div class="content">
+
+<!--      <div class="gallery">-->
+<!--        <div class="gallery__grid">-->
+<!--          <div class="gallery__item">-->
+<!--            <img-->
+<!--                    src="./images/game_wide1.png"-->
+<!--                    data-fullsize="./images/game_wide1.png">-->
+<!--            <div class="gallery__info">-->
+<!--              <h5 class="gallery__text">Fortify your city with walls and towers. Balance defense with the need for your citizens to have a clear path to their places of work</h5>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
 
       <div class="gallery">
         <div class="gallery__grid">
