--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preload" href="./images/capsule7.png" as="image">
   <link rel="preload" href="./images/title-logo.png" as="image">
   <link rel="icon" type="image/png" href="./images/favicon.png">
-<script defer src="npm.style-loader.93c1c0a777b14eace0ec.js"></script><script defer src="npm.css-loader.d7f97f25f781b04a29ba.js"></script><script defer src="main.0bc5955af90beeb6eed7.js"></script></head>
+<script defer src="npm.style-loader.93c1c0a777b14eace0ec.js"></script><script defer src="npm.css-loader.d7f97f25f781b04a29ba.js"></script><script defer src="main.744fcb509f32adc4ef3b.js"></script></head>
 <body>
   <header id="header">
     <div class="cropped-image">
@@ -38,40 +38,68 @@
 
   <div id="container">
 
-    <div class="features">
-      <ul class="features__list">
+<!--    <div class="features">-->
+<!--      <ul class="features__list">-->
 
-        <li class="features__item">
-<!--          <div class="features__icon">🏰</div>-->
-          <h3 class="features__title">Multi-Tiered Defenses</h3>
-            <img class="features__image"
-                 src="./images/game_wide1.png"
-                 data-fullsize="./images/game_wide1.png">
-          <p class="features__description">Construct devastating multi-layered defensive arrangements by combining tower abilities with natural 3d terrain advantages.</p>
-        </li>
+<!--        <li class="features__item">-->
+<!--&lt;!&ndash;          <div class="features__icon">🏰</div>&ndash;&gt;-->
+<!--          <h3 class="features__title">Multi-Tiered Defenses</h3>-->
+<!--            <img class="features__image"-->
+<!--                 src="./images/game_wide1.png"-->
+<!--                 data-fullsize="./images/game_wide1.png">-->
+<!--          <p class="features__description">Construct devastating multi-layered defensive arrangements by combining tower abilities with natural 3d terrain advantages.</p>-->
+<!--        </li>-->
 
-        <li class="features__item">
-<!--          <div class="features__icon">⚒️</div>-->
-          <h3 class="features__title">Resource Management</h3>
-            <img class="features__image"
-                 src="./images/game_wide2.png"
-                 data-fullsize="./images/game_wide1.png">
-          <p class="features__description">Construct strategic defenses while preserving the economic arteries that keep your civilization thriving.</p>
-        </li>
+<!--        <li class="features__item">-->
+<!--&lt;!&ndash;          <div class="features__icon">⚒️</div>&ndash;&gt;-->
+<!--          <h3 class="features__title">Resource Management</h3>-->
+<!--            <img class="features__image"-->
+<!--                 src="./images/game_wide2.png"-->
+<!--                 data-fullsize="./images/game_wide1.png">-->
+<!--          <p class="features__description">Construct strategic defenses while preserving the economic arteries that keep your civilization thriving.</p>-->
+<!--        </li>-->
 
-        <li class="features__item">
-            <!--          <div class="features__icon">🏔️</div>-->
-          <h3 class="features__title">3D Terrain Mastery</h3>
-          <img class="features__image"
-            src="./images/game_wide1.png"
-            data-fullsize="./images/game_wide1.png">
-<!--          <p class="features__description">Build your medieval stronghold and expand your city across ever-changing procedural landscapes where no two maps are identical.</p>-->
-          <p class="features__description">Exploit elevation advantages for devastating attack range and strategic damage bonuses as you build your medieval stronghold and expand across ever-changing procedural landscapes.</p>
-        </li>
-      </ul>
+<!--        <li class="features__item">-->
+<!--            &lt;!&ndash;          <div class="features__icon">🏔️</div>&ndash;&gt;-->
+<!--          <h3 class="features__title">3D Terrain Mastery</h3>-->
+<!--          <img class="features__image"-->
+<!--            src="./images/game_wide1.png"-->
+<!--            data-fullsize="./images/game_wide1.png">-->
+<!--&lt;!&ndash;          <p class="features__description">Build your medieval stronghold and expand your city across ever-changing procedural landscapes where no two maps are identical.</p>&ndash;&gt;-->
+<!--          <p class="features__description">Exploit elevation advantages for devastating attack range and strategic damage bonuses as you build your medieval stronghold and expand across ever-changing procedural landscapes.</p>-->
+<!--        </li>-->
+<!--      </ul>-->
+<!--    </div>-->
     </div>
 
 
+
+    <div class="features">
+        <video controls autoplay loop class="features2__video">
+            <source src="./video/1_establish_keep.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <p>Establish your keep and guide the expansion of your city as it sprawls across scenic procedural terrain. Never the same map twice!</p>
+        <img class="features2__image"
+             src="./images/game_wide1.png">
+        <p>Fortify your city with walls and towers. Balance defense with the need for your citizens to have a clear path to their places of work. </p>
+        <video controls autoplay loop class="features2__video">
+            <source src="./video/3_construct_strategic_defense.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <p>Construct your defenses strategically to gain a defensive advantage from rivers and cliffs. Fend off the vast hordes of rampaging monsters that creep forth to destroy you. </p>
+        <video controls autoplay loop class="features2__video">
+            <source src="./video/5_recruit_wizards.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <p>Equip your towers with the right armaments to lay waste to dozens of charming demonic beasts. Pierce their defenses and exploit their weaknesses. </p>
+        <img class="features2__image"
+             src="./images/game_wide2.png">
+        <p>Recruit powerful elite wizards and station them in your wizard towers to give your city a fighting chance against the escalating enemy swarm.</p>
+        <img class="features2__image"
+             src="./images/game_wide3.png">
+        <p>Manage resource production through four beautiful seasons each year as your settlement grows into a prosperous fortified city. </p>
+    </div>
 
     <div class="marketing-content">
       <a href="https://store.steampowered.com/app/YOUR_APP_ID/Fortifend/" class="cta-button">
