--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preload" href="./images/capsule7.png" as="image">
   <link rel="preload" href="./images/title-logo.png" as="image">
   <link rel="icon" type="image/png" href="./images/favicon.png">
-<script defer src="npm.style-loader.93c1c0a777b14eace0ec.js"></script><script defer src="npm.css-loader.d7f97f25f781b04a29ba.js"></script><script defer src="main.744fcb509f32adc4ef3b.js"></script></head>
+<script defer src="npm.style-loader.93c1c0a777b14eace0ec.js"></script><script defer src="npm.css-loader.d7f97f25f781b04a29ba.js"></script><script defer src="main.c65d0539427b76323227.js"></script></head>
 <body>
   <header id="header">
     <div class="cropped-image">
@@ -75,30 +75,30 @@
 
 
     <div class="features">
-        <video controls autoplay loop class="features2__video">
+        <video autoplay playsinline muted loop class="features2__video">
             <source src="./video/1_establish_keep.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        <p>Establish your keep and guide the expansion of your city as it sprawls across scenic procedural terrain. Never the same map twice!</p>
+        <p class="features2__description">Establish your keep and guide the expansion of your city as it sprawls across scenic procedural terrain. Never the same map twice!</p>
         <img class="features2__image"
              src="./images/game_wide1.png">
-        <p>Fortify your city with walls and towers. Balance defense with the need for your citizens to have a clear path to their places of work. </p>
-        <video controls autoplay loop class="features2__video">
+        <p class="features2__description">Fortify your city with walls and towers. Balance defense with the need for your citizens to have a clear path to their places of work. </p>
+        <video autoplay playsinline muted loop class="features2__video">
             <source src="./video/3_construct_strategic_defense.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        <p>Construct your defenses strategically to gain a defensive advantage from rivers and cliffs. Fend off the vast hordes of rampaging monsters that creep forth to destroy you. </p>
-        <video controls autoplay loop class="features2__video">
+        <p class="features2__description">Construct your defenses strategically to gain a defensive advantage from rivers and cliffs. Fend off the vast hordes of rampaging monsters that creep forth to destroy you. </p>
+        <img class="features2__image"
+             src="./images/game_wide2.png">
+        <p class="features2__description">Equip your towers with the right armaments to lay waste to dozens of charming demonic beasts. Pierce their defenses and exploit their weaknesses. </p>
+        <video autoplay playsinline muted loop class="features2__video">
             <source src="./video/5_recruit_wizards.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        <p>Equip your towers with the right armaments to lay waste to dozens of charming demonic beasts. Pierce their defenses and exploit their weaknesses. </p>
-        <img class="features2__image"
-             src="./images/game_wide2.png">
-        <p>Recruit powerful elite wizards and station them in your wizard towers to give your city a fighting chance against the escalating enemy swarm.</p>
+        <p class="features2__description">Recruit powerful elite wizards and station them in your wizard towers to give your city a fighting chance against the escalating enemy swarm.</p>
         <img class="features2__image"
              src="./images/game_wide3.png">
-        <p>Manage resource production through four beautiful seasons each year as your settlement grows into a prosperous fortified city. </p>
+        <p class="features2__description">Manage resource production through four beautiful seasons each year as your settlement grows into a prosperous fortified city. </p>
     </div>
 
     <div class="marketing-content">
