--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
   <meta name="author" content="Information about the author here">
 <!--  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>-->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, user-scalable=yes"/>
-  <link rel="preload" href="./images/capsule7.png" as="image">
+  <link rel="preload" href="./images/capsule8.png" as="image">
   <link rel="preload" href="./images/title-logo-small.png" as="image">
   <link rel="icon" type="image/png" href="./images/favicon.png">
-<script defer src="npm.style-loader.93c1c0a777b14eace0ec.js"></script><script defer src="npm.css-loader.d7f97f25f781b04a29ba.js"></script><script defer src="main.427297b66f49c85167ab.js"></script></head>
+<script defer src="npm.style-loader.93c1c0a777b14eace0ec.js"></script><script defer src="npm.css-loader.d7f97f25f781b04a29ba.js"></script><script defer src="main.c84bd609aee5fb0a16a0.js"></script></head>
 <body>
   <header id="header">
     <div class="cropped-image">
-      <img src="./images/capsule7.png"  alt="Moss monster in the background>">
+      <img src="./images/capsule8.png"  alt="Moss monster in the background>">
 <!--      <img src="./images/capsule6.webp" width="450px"  alt="Moss monster in the background>">-->
 
     </div>
 
     <div class="banner-container">
-      <img src="./images/title-logo-small.png"
-           class="banner-image"
-           alt="fortifend logo">
+<!--      <img src="./images/title-logo-small.png"-->
+<!--           class="banner-image"-->
+<!--           alt="fortifend logo">-->
     </div>
 
   </header>
