--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,7 @@
   </div>
 
 
+
   <div id="container">
 
 <!--    <div class="features">-->
@@ -75,30 +76,36 @@
 
 
     <div class="features">
+
+        <h5 class="features2__description">
+            Fortifend is a fantasy city builder with a mix of resource management and strategic tower defense. As Lord Mayor, build your settlement into a fortified city capable of fending off waves of demonic invaders. Guard the gates!
+        </h5>
+
         <video autoplay playsinline muted loop class="features2__video">
             <source src="./video/1_establish_keep.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        <p class="features2__description">Establish your keep and guide the expansion of your city as it sprawls across scenic procedural terrain. Never the same map twice!</p>
+        <h5 class="features2__description">Establish your keep and guide the expansion of your city as it sprawls across scenic procedural terrain. Never the same map twice!</h5>
         <img class="features2__image"
              src="./images/game_wide1.png">
-        <p class="features2__description">Fortify your city with walls and towers. Balance defense with the need for your citizens to have a clear path to their places of work. </p>
+        <h5 class="features2__description">Fortify your city with walls and towers. Balance defense with the need for your citizens to have a clear path to their places of work. </h5>
         <video autoplay playsinline muted loop class="features2__video">
             <source src="./video/3_construct_strategic_defense.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        <p class="features2__description">Construct your defenses strategically to gain a defensive advantage from rivers and cliffs. Fend off the vast hordes of rampaging monsters that creep forth to destroy you. </p>
+        <h5 class="features2__description">Construct your defenses strategically to gain a defensive advantage from rivers and cliffs. Fend off the vast hordes of rampaging monsters that creep forth to destroy you. </h5>
         <img class="features2__image"
              src="./images/game_wide2.png">
-        <p class="features2__description">Equip your towers with the right armaments to lay waste to dozens of charming demonic beasts. Pierce their defenses and exploit their weaknesses. </p>
+        <h5 class="features2__description">Equip your towers with the right armaments to lay waste to dozens of charming demonic beasts. Pierce their defenses and exploit their weaknesses. </h5>
         <video autoplay playsinline muted loop class="features2__video">
             <source src="./video/5_recruit_wizards.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        <p class="features2__description">Recruit powerful elite wizards and station them in your wizard towers to give your city a fighting chance against the escalating enemy swarm.</p>
+        <h5 class="features2__description">Recruit powerful elite wizards and station them in your wizard towers to give your city a fighting chance against the escalating enemy swarm.</h5>
+        <hr>
         <img class="features2__image"
              src="./images/game_wide3.png">
-        <p class="features2__description">Manage resource production through four beautiful seasons each year as your settlement grows into a prosperous fortified city. </p>
+        <h5 class="features2__description">Manage resource production through four beautiful seasons each year as your settlement grows into a prosperous fortified city. </h5>
     </div>
 
     <div class="marketing-content">
