--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preload" href="./images/capsule8.png" as="image">
   <link rel="preload" href="./images/title-logo-small.png" as="image">
   <link rel="icon" type="image/png" href="./images/favicon.png">
-<script defer src="npm.style-loader.93c1c0a777b14eace0ec.js"></script><script defer src="npm.css-loader.d7f97f25f781b04a29ba.js"></script><script defer src="main.32a9eb995e547dff9c86.js"></script></head>
+<script defer src="npm.style-loader.93c1c0a777b14eace0ec.js"></script><script defer src="npm.css-loader.d7f97f25f781b04a29ba.js"></script><script defer src="main.b09001ac1b458204d0bc.js"></script></head>
 <body>
   <header id="header">
     <div class="cropped-image">
@@ -33,6 +33,12 @@
     <h3 class="marketing-content__slogan">Prosper in untamed lands</h3>
     <h3 class="marketing-content__slogan">Withstand the demon horde</h3>
     <h3 class="marketing-content__slogan">Forge your fortress</h3>
+  </div>
+
+  <div class="marketing-content">
+      <a href="https://store.steampowered.com/app/YOUR_APP_ID/Fortifend/" class="cta-button">
+          WISHLIST ON STEAM
+      </a>
   </div>
 
 
@@ -74,38 +80,38 @@
 
 
 
-    <div class="features">
+    <div class="features2">
+
+        <h5 class="features2__description">
+            Fortifend is a fantasy city builder with a mix of resource management and strategic tower defense. As Lord Mayor, build your settlement into a fortified city capable of fending off waves of demonic invaders. Guard the gates!
+        </h5>
+
         <video autoplay playsinline muted loop class="features2__video">
             <source src="./video/1_establish_keep.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        <p class="features2__description">Establish your keep and guide the expansion of your city as it sprawls across scenic procedural terrain. Never the same map twice!</p>
+        <h5 class="features2__description">Establish your keep and guide the expansion of your city as it sprawls across scenic procedural terrain. Never the same map twice!</h5>
         <img class="features2__image"
              src="./images/game_wide1.png">
-        <p class="features2__description">Fortify your city with walls and towers. Balance defense with the need for your citizens to have a clear path to their places of work. </p>
+        <h5 class="features2__description">Fortify your city with walls and towers. Balance defense with the need for your citizens to have a clear path to their places of work. </h5>
         <video autoplay playsinline muted loop class="features2__video">
             <source src="./video/3_construct_strategic_defense.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        <p class="features2__description">Construct your defenses strategically to gain a defensive advantage from rivers and cliffs. Fend off the vast hordes of rampaging monsters that creep forth to destroy you. </p>
+        <h5 class="features2__description">Construct your defenses strategically to gain a defensive advantage from rivers and cliffs. Fend off the vast hordes of rampaging monsters that creep forth to destroy you. </h5>
         <img class="features2__image"
              src="./images/game_wide2.png">
-        <p class="features2__description">Equip your towers with the right armaments to lay waste to dozens of charming demonic beasts. Pierce their defenses and exploit their weaknesses. </p>
+        <h5 class="features2__description">Equip your towers with the right armaments to lay waste to dozens of charming demonic beasts. Pierce their defenses and exploit their weaknesses. </h5>
         <video autoplay playsinline muted loop class="features2__video">
             <source src="./video/5_recruit_wizards.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        <p class="features2__description">Recruit powerful elite wizards and station them in your wizard towers to give your city a fighting chance against the escalating enemy swarm.</p>
+        <h5 class="features2__description">Recruit powerful elite wizards and station them in your wizard towers to give your city a fighting chance against the escalating enemy swarm.</h5>
         <img class="features2__image"
              src="./images/game_wide3.png">
-        <p class="features2__description">Manage resource production through four beautiful seasons each year as your settlement grows into a prosperous fortified city. </p>
+        <h5 class="features2__description">Manage resource production through four beautiful seasons each year as your settlement grows into a prosperous fortified city. </h5>
     </div>
 
-    <div class="marketing-content">
-      <a href="https://store.steampowered.com/app/YOUR_APP_ID/Fortifend/" class="cta-button">
-        WISHLIST ON STEAM
-      </a>
-    </div>
 
 
 <!--    <div class="trailer-section">-->
